[package]
name = "audio_general"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"

cpal = "0.15.2"
dasp = {version = "0.11.0", features = ["all"]}
audrey = "0.3.0"
rustfft = "6.1.0"

petgraph = "0.6.3"

wgpu = "0.17.0"
winit = "0.28.6"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
log = "0.4"
